--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b4c3a9">  <td>23/10/03 22:42:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.logintest()[pri:0, instance:qa.opencart.test.LoginPageTest@48f278eb]">logintest</td> 
-  <td>main@1383178166</td>   <td></td> </tr>
-<tr bgcolor="8f6f80">  <td>23/10/03 22:42:12</td>   <td>6</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.quitbrowser()[pri:0, instance:qa.opencart.test.LoginPageTest@48f278eb]">&lt;&lt;quitbrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="8f6f80">  <td>23/10/03 22:42:12</td>   <td>-21</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:qa.opencart.test.LoginPageTest@48f278eb]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1383178166</td>   <td></td> </tr>
+<tr bgcolor="86b9e3">  <td>23/10/07 16:49:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountsPageTest.Accountspagelogotest()[pri:0, instance:qa.opencart.test.AccountsPageTest@7bd4937b]">Accountspagelogotest</td> 
+  <td>main@1158258131</td>   <td></td> </tr>
+<tr bgcolor="86b9e3">  <td>23/10/07 16:49:32</td>   <td>43</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountsPageTest.Accountspagesectionheadertest()[pri:0, instance:qa.opencart.test.AccountsPageTest@7bd4937b]">Accountspagesectionheadertest</td> 
+  <td>main@1158258131</td>   <td></td> </tr>
+<tr bgcolor="86b9e3">  <td>23/10/07 16:49:32</td>   <td>116</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountsPageTest.Accountspagetitletest()[pri:0, instance:qa.opencart.test.AccountsPageTest@7bd4937b]">Accountspagetitletest</td> 
+  <td>main@1158258131</td>   <td></td> </tr>
+<tr bgcolor="86b9e3">  <td>23/10/07 16:49:32</td>   <td>-598</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountsPageTest.accsetup()[pri:0, instance:qa.opencart.test.AccountsPageTest@7bd4937b]">&gt;&gt;accsetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1158258131</td>   <td></td> </tr>
+<tr bgcolor="86b9e3">  <td>23/10/07 16:49:33</td>   <td>140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountsPageTest.logoutlinktest()[pri:0, instance:qa.opencart.test.AccountsPageTest@7bd4937b]">logoutlinktest</td> 
+  <td>main@1158258131</td>   <td></td> </tr>
+<tr bgcolor="8ef0ea">  <td>23/10/07 16:49:33</td>   <td>245</td> <td>&nbsp;</td><td title="&lt;&lt;BaseTest.quitbrowser()[pri:0, instance:qa.opencart.test.AccountsPageTest@7bd4937b]">&lt;&lt;quitbrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1158258131</td>   <td></td> </tr>
+<tr bgcolor="86b9e3">  <td>23/10/07 16:49:33</td>   <td>181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountsPageTest.searchbartest()[pri:0, instance:qa.opencart.test.AccountsPageTest@7bd4937b]">searchbartest</td> 
+  <td>main@1158258131</td>   <td></td> </tr>
+<tr bgcolor="8ef0ea">  <td>23/10/07 16:49:29</td>   <td>-3855</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:qa.opencart.test.AccountsPageTest@7bd4937b]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1158258131</td>   <td></td> </tr>
 </table>
